# sourcelocation.py

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py
.github/workflows/: python-install-lint-test.yml
src/: sourcelocation.py
src/sourcelocation/: __init__.py  diff.py  fileline.py  location.py  utils.py
test/: test_diff.py  test_fileline.py  test_filelineset.py
test/diffs/: git.diff  h1.diff
