[metadata]
name = sourcelocation
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = "https://github.com/ChrisTimperley/sourcelocation"
description = Simple data structures for representing source code locations
long-description = file: README.rst, LICENSE
keywords = data structure, source code, program, analysis
license = MIT
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
testpaths = test
addopts = -rx -v

[pycodestyle]
ignore = W605,E704
max_line_length = 79

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  pycodestyle
  pytest
commands =
  mypy src
  pycodestyle src

[mypy]
ignore_missing_imports = True

[options.extras_require]
test = pytest
